# grafbase

./: .dockerignore  Cargo.toml  Dockerfile  flake.nix  grafbase.config.ts
cli/crates/cli/: Cargo.toml
cli/crates/federated-dev/: Cargo.toml
cli/crates/federated-dev/src/: dev.rs  lib.rs  start.rs
cli/crates/federated-dev/src/dev/: gateway_nanny.rs
cli/crates/production-server/: Cargo.toml
cli/crates/production-server/src/: server.rs
cli/crates/production-server/src/server/: gateway.rs  graph_fetch_method.rs  graph_updater.rs
cli/crates/server/: Cargo.toml
cli/crates/server/src/: proxy.rs  servers.rs
engine/crates/engine-v2/: Cargo.toml
engine/crates/engine-v2/auth/src/: jwt.rs
engine/crates/engine-v2/config/: Cargo.toml
engine/crates/engine-v2/config/src/: lib.rs
engine/crates/engine-v2/id-newtypes/: Cargo.toml
engine/crates/engine-v2/schema/: Cargo.toml
engine/crates/engine-v2/schema/src/: conversion.rs  wrapping.rs
engine/crates/engine-v2/schema/src/sources/: federation.rs  introspection.rs
engine/crates/engine-v2/src/: engine.rs
engine/crates/engine-v2/src/execution/: coordinator.rs  error.rs  prepared.rs
engine/crates/engine-v2/src/operation/: build.rs
engine/crates/engine-v2/src/operation/walkers/: field.rs
engine/crates/engine-v2/src/plan/: collected.rs  mod.rs  state.rs
engine/crates/engine-v2/src/plan/planning/: boundary.rs  collect.rs  planner.rs  walker_ext.rs
engine/crates/engine-v2/src/plan/walkers/: collected.rs  mod.rs  selection_set.rs
engine/crates/engine-v2/src/request/: flat.rs  selection_set.rs
engine/crates/engine-v2/src/request/walkers/: mod.rs
engine/crates/engine-v2/src/response/: error.rs  mod.rs  path.rs
engine/crates/engine-v2/src/response/read/: mod.rs  view.rs
engine/crates/engine-v2/src/response/write/: mod.rs
engine/crates/engine-v2/src/response/write/deserialize/: field.rs  list.rs  mod.rs  nullable.rs
engine/crates/engine-v2/src/response/write/deserialize/selection_set/: collected.rs  conditional.rs  mod.rs
engine/crates/engine-v2/src/sources/: mod.rs
engine/crates/engine-v2/src/sources/graphql/: federation.rs  mod.rs  query.rs  subscription.rs
engine/crates/engine-v2/src/sources/graphql/deserialize/: entities.rs  errors.rs  mod.rs  response.rs
engine/crates/engine-v2/src/sources/introspection/: mod.rs  writer.rs
engine/crates/engine/src/: schema.rs
engine/crates/engine/src/response/: mod.rs
engine/crates/federated-graph/src/: from_sdl.rs
engine/crates/gateway-core/src/: lib.rs
engine/crates/gateway-local/: Cargo.toml
engine/crates/gateway-local/src/: main.rs
engine/crates/gateway-v2/: Cargo.toml
engine/crates/gateway-v2/src/: lib.rs
engine/crates/graph-entities/src/response/: mod.rs
engine/crates/integration-tests/: Cargo.toml
engine/crates/integration-tests/benches/: federation.rs
engine/crates/runtime/: Cargo.toml
engine/crates/runtime-local/: Cargo.toml
engine/crates/runtime-local/src/: fetch.rs
engine/crates/runtime/src/: fetch.rs
engine/crates/telemetry/: Cargo.toml
engine/crates/telemetry/src/: otel.rs
engine/crates/tracing/src/: span.rs
(+8 files in other folders)
