[package]
authors = ["Grafbase"]
description = "A dynamic GraphQL engine written in Rust"
edition = "2021"
homepage = "https://grafbase.com"
keywords = ["graphql", "engine", "grafbase"]
license = "MPL-2.0"
name = "engine-v2"
readme = "README.md"
repository = "https://github.com/grafbase/grafbase"
version = "3.0.31"

[lints]
workspace = true

[features]
default = []
auth = ["dep:gateway-v2-auth"]
axum = ["dep:axum", "dep:tokio", "dep:async-trait", "dep:tower-service", "engine-v2-common/axum", "auth"]
plan_cache = ["dep:mini-moka"]
tracing = ["dep:grafbase-tracing"]

[dependencies]
async-runtime.workspace = true
futures-util.workspace = true
futures.workspace = true
hex.workspace = true
id-newtypes = { path = "./id-newtypes", package = "engine-v2-id-newtypes" }
im = "15"
itertools.workspace = true
hex.workspace = true
http.workspace = true
lasso = "0.7"
log.workspace = true
mini-moka = { version = "0.10", optional = true, features = ["sync"] }
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
serde-value = "0.7"
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
mini-moka = { workspace = true, optional = true, features = ["sync"] }
headers.workspace = true

config = { package = "engine-v2-config", path = "./config" }
gateway-v2-auth = { workspace = true, optional = true }
engine-v2-common.workspace = true
common-types.workspace = true
engine-value = { path = "../engine/value" }
engine-parser = { path = "../engine/parser" }
id-newtypes.workspace = true
grafbase-tracing = { workspace = true, optional = true }
schema = { path = "./schema", package = "engine-v2-schema" }
# needed for errors, not entirely sure if we should be separate or not right now.
# might move it back to engine, the goal isn't to rewrite everything from engine per Se
# but having more explicit dependencies for now.
engine = { path = "../engine" }
runtime.workspace = true

# for axum websocket support
axum = { workspace = true, optional = true, features = ["ws"] }
tokio = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
async-trait = { version = "0.1.77", optional = true }



